www/style.css
/* ... */
	
	.button-link .button-text span::before {
		content: '';
		position: absolute;
		bottom: 1px;
		left: 0;
		width: 100%;
		height: 1px;
		background: transparent;
		transform: scaleX(1);
		transform-origin: right;
		transition: transform 0.3s ease-out;
	}
	
	.button-link.left .button-text span::before {
		transform-origin: left;
	}
	
	.light-content .button-link .button-text span::before, .dark-section .button-link .button-text span::before {
		background: transparent;
	}
	
	.light-content .light-section .button-link .button-text span::before {
		background: transparent;
	}
  
    .button-wrap.button-link:hover .button-text span {
		transform: translateY(0);
		-webkit-transform: translateY(0);
	}
	
	.button-link:hover .button-text span::before {
		transform: scaleX(0);
		-webkit-transform: scaleX(0);
		transform-origin: left;
	}
	
	.button-link.left:hover .button-text span::before {
		transform-origin: right;
	}
	
	.button-link .button-icon i {
		background-color:#000;
		color:transparent;
		font-size: 14px;		
		border-radius:10px;
		transform: scale(0.3);
		box-sizing:border-box;
		transition: all .3s ease-out;
		text-indent:-100px;
		overflow:hidden;
		opacity:1;
	}
	
	.button-link:hover .button-icon i {
		background-color:#000;
		color:#fff;
		transform: scale(1.2);
		border-radius:100%;
		text-indent:0px;
		opacity:1;
	}
	
	.light-content .button-link .button-icon i, .dark-section .button-link .button-icon i {
		background-color:#fff;
	}
	
	.light-content .button-link:hover .button-icon i, .dark-section .button-link:hover .button-icon i {
		background-color:#fff;
		color:#000;
		opacity:1;
	}
	
	.light-content .light-section .button-link:hover .button-icon i {
		background-color:#000;
		color:#fff;
		opacity:1;
	}
	
	.button-link.right .button-icon i {
		transform: scale(0.3) translateX(-65px) translateY(2px);
		-webkit-transform: scale(0.3) translateX(-65px) translateY(2px);
	}
	
	.button-link.right:hover .button-icon i {
		transform: scale(1.2) translateX(0px);
		-webkit-transform: scale(1.2) translateX(0px);
		border-radius:100%;
	}
	
	.button-wrap.left .button-text span {
		text-align:left;
	}
	
	.button-wrap.right .button-text span {
		text-align:right;
	}
	
	.link-text {
		line-height:30px;
		margin:0;
		overflow: hidden;
		display: table;
		width:auto;
		padding:0;
		color:#000;
	}
	
	.clapat-footer .link-text {
		float:left;
		opacity:0;
		margin-top: 25px;
	}
	
	p .link-text {
		display:inline-table;
	}
	
	.light-content .link-text, .dark-section .link-text {
		color:#fff;
	}
	
	.light-content .light-section .link-text {
		color:#000;
	}
	
	.link-text span {
		position: relative;
		display: inline-block;
		-webkit-transition: -webkit-transform 0.2s;
		transition: transform 0.2s;
		width:auto;
		text-align:center;
		transform-origin: 100% 0%;
		pointer-events:initial;
		cursor:pointer;
	}
	
	.link-text span::before {
		position: absolute;
		width:auto;
		top: 100%;
		left:0;
		content: attr(data-hover);
	}
	
	.link-text:hover span {
		-webkit-transform: translateY(-100%);
		transform: translateY(-100%);
		transform-origin: 0% 0%;
	}
	
	.button-icon i.list-view, .button-icon i.grid-view {
		height:40px;
		width:40px;
		position:relative;
		display:block;
	}
	
	.button-icon i.list-view span, .button-icon i.grid-view span {
		width:4px;
		height:4px;
		border-radius:4px;
		background-color:currentColor;
		position:absolute;
		display:block;		
	}
	
	.button-icon i.list-view span:nth-child(1) {
		left:10px;
		top:18px;
	}
	
	.button-icon i.list-view span:nth-child(2) {
		left:18px;
		top:18px;
	}
	
	.button-icon i.list-view span:nth-child(3) {
		left:26px;
		top:18px;
	}
	
	.button-icon i.grid-view span:nth-child(1) {
		left:14px;
		top:14px;
	}
	
	.button-icon i.grid-view span:nth-child(2) {
		right:14px;
		top:14px;
	}
	
	.button-icon i.grid-view span:nth-child(3) {
		left:14px;
		bottom:14px;
	}
	
	.button-icon i.grid-view span:nth-child(4) {
		right:14px;
		bottom:14px;
	}
	
	.clapat-nav-wrapper, .clapat-nav-wrapper.open {
		background:transparent;
	}
	
/*--------------------------------------------------
	07. Responsive
---------------------------------------------------*/			

			
@media only screen and (max-width: 1466px) {
	
	.row_padding_all {
		padding-left: 60px;
		padding-right: 60px;
	}
	
	.row_padding_left {
		padding-left:60px;
	}
	
	.row_padding_right {
		padding-right:60px;
	}
	
	.trackbar {
  		padding: 0 60px;
	}
	
	.percentage-intro {
  		bottom: 40px;
	}
	
	.clapat-header {
    	height: 100px;
	}
	
	#header-container {
		padding: 10px 60px;
	}
	
	@media (min-width: 1025px) {
	  .clapat-header.classic-menu .clapat-nav-wrapper {
		top: 17px;
	  }
	}
	
	.clapat-footer {
    	height: 100px;
	}
	
	#footer-container {
    	padding: 0 60px;
		margin: 10px auto;
	}
	
	.socials-wrap:hover .socials-text {
		transform: translateY(20px) translateX(5px);
		-webkit-transform: translateY(20px) translateX(5px);		
	}
	
}


/* Mobile copyright bar — hidden on desktop, shown on tablet/mobile */
.mobile-copyright-bar {
	display: none;
}
/* ... */

